# text-classifier

./: README.md  pyproject.toml
text_classifier/: text_classifier.ipynb
