[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["anas <civil.anas1000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.1.6"
pandas = "^1.3.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
